<resources>
    <string name="app_name">Medical Appointment</string>
    <string name="infoInitial">Welcome to Your Medical Appointment APP!</string>
    <string name="btnPatient">Patient</string>
    <string name="btnAppointment">Appointment</string>
    <string name="textVPatient">Welcome to your Patient Tab</string>
    <string name="btnAddPatient">Add Patient</string>
    <string name="btnEditPatient">Edit Patient</string>
    <string name="btnCheckPatient">Check Patient</string>
    <string name="btnDeletePatient">Delete Patient</string>
    <string name="ViewLogo">logo</string>
    <string name="textVAppointment">Welcome to you Medical Appointment Tab</string>
    <string name="btnAddApoint">Add Medical Appointment</string>
    <string name="btnCheckAppoint">Check Medical Appointments</string>
    <string name="btnEditAppoint">Edit Your Medical Appointments</string>
    <string name="btnDeleteAppoint">Delete Medical Appointment</string>
    <string name="menuAdd">Add</string>
    <string name="mDelete">Delete</string>
    <string name="mEdit">Edit</string>
    <string name="save">Save</string>
    <string name="patient_name">Patient Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthay_date">Birthay Date</string>
    <string name="city">City</string>
    <string name="result">Result COVID-19</string>
    <string name="infoSaved">Saved</string>

    <string name="appoint_date">Appointment Date</string>
    <string name="appoint_hour">Appointment Hour</string>

    <string name="appoint_tvDate">Date:</string>
    <string name="appoint_tvHour">Hour:</string>
</resources>
